Thu Jun  4 02:25:51 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/base64.rb: typo fixed.  a patch from okkez.   [ruby-dev:38564]

Wed Jun  3 06:12:26 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enum.c (first_i): Enumerator#first should consume only what is
	  needed.   a patch from Marc-Andre Lafortune.  [ruby-core:23661]

	* enum.c (take_i): ditto.

	* enum.c (enum_first): call to_int once for an argument.  a patch
	  from Marc-Andre Lafortune.

Mon Jun  1 20:45:48 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): should set srcs in all paths.

	* lib/mkmf.rb (create_makefile): $objs somtimes includes files with
	  $OBJEXT instead of ".o".

Mon Jun  1 09:02:48 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (VpAlloc): avoid ALLOCA_N() to avoid
	  segmentation fault caused by (insanely) long decimal values.
	  backported from 1.9.
 
	* ext/bigdecimal/bigdecimal.c (BigDecimal_dump, BigDecimal_to_i,
	  BigDecimal_to_f, BigDecimal_to_s, BigDecimal_split,
	  BigDecimal_inspect): ditto.

Mon Jun  1 07:20:02 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_to_f): returns Inf if
	  exp is bigger than DBL_MANT_DIG.

Sun May 31 23:28:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): checks for duplication of source
	  files.

Sun May 31 23:26:36 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (istrailinggarbage): fixed typo.

Fri May 29 09:19:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/thread/thread.c (unlock_mutex_inner): fixed wrong variable.
	  a patch from Jeremy Kemper <jeremy AT bitsweat.net> a
	  [ruby-core:23592].  [ruby-core:23588]

Mon May 25 05:02:34 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/cgi.rb (HTTP_STATUS): typo fixed.   [ruby-dev:38538]

Thu May 21 08:54:32 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/openssl/ossl_digest.c (Init_ossl_digest): avoid recursing